# opengltest

./: .gitignore  .lfsconfig  CMakeLists.txt  Makefile  README.md  dnf.md  glad.c  imgui.ini  main.cpp  t.cpp  test.cpp
LearnDemo1/: CMakeLists.txt
LearnDemo1/src/: main.cpp  mglm.cpp
RubicCube/: FormCommandView.cpp  FormCommandView.h  GLTexture.h  MainFrm.cpp  OpenGLView.cpp  OpenGLView.h  Sphere.aps  Sphere.h  Sphere.rc  glm.h  resource.h  操作说明.txt
RubicCube/res/: Sphere.rc2  sample_formula_0.txt  sample_formula_1.txt
SDLDemo/: CMakeLists.txt  main.cpp
glad/: glad.h
project/LearnDemo1/: CMakeLists.txt
project/LearnDemo1/src/: FragmentShader.fs  VertexShader.vs  main.cpp  mglm.cpp
project/LearnDemo2/: CMakeLists.txt
project/LearnDemo2/src/: FragmentShader.fs  VertexShader.vs  main.cpp  testglm.cpp
project/OpenCL/: CMakeLists.txt  main.cpp  vector_add_kernel.cl
project/RubicCube/: GLTexture.cpp  MagicCube.cpp  MagicCube.h  MainFrm.h  Sphere.cpp  Sphere.sln  Sphere.vcxproj  Sphere.vcxproj.filters  SphereDoc.cpp  SphereDoc.h  SphereView.cpp  SphereView.h  StdAfx.cpp  StdAfx.h  glm.cpp
project/RubicCube/Debug/: Sphere.exe.recipe  Sphere.ilk  Sphere.res  Sphere.vcxproj.FileListAbsolute.txt  vc142.idb
project/RubicCube/Debug/Sphere.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Sphere.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
project/RubicCube/res/: sample_formula_2.txt
project/SDLDemo/: CMakeLists.txt  imgui.cpp  main.cpp
project/SDLPlane/: CMakeLists.txt  main.cpp
project/SoftMini3D/: CMakeLists.txt  Mini3D.h  Mini3DCalcLines.cpp  Mini3DCalcLines.h  Mini3DDevice.cpp  Mini3DDrawCube.cpp  Mini3DDrawCube.h  Mini3DGeometryCalc.cpp  Mini3DGeometryCalc.h  Mini3DMath.cpp  Mini3DMath.h  Mini3DRender.cpp  Mini3DRender.h  Mini3DTransform.cpp  Mini3DTransform.h  Mini3Dbmp.cpp  Mini3Dbmp.h  main.cpp  note.md  test.cpp  test3D.cpp
project/SoftMini3D/device/: Mini3DDevice.cpp  Mini3DDevice.h
project/SoftMini3D/draw/: Mini3DCalcLines.cpp  Mini3DCalcLines.h  Mini3DDraw.cpp  Mini3DDraw.h  Mini3DDrawCircle.cpp  Mini3DDrawCircle.h  Mini3DDrawCube.cpp  Mini3DDrawCube.h  Mini3DDrawPanel.cpp  Mini3DDrawPanel.h
project/SoftMini3D/math/: Mini3DGeometryCalc.cpp  Mini3DGeometryCalc.h  Mini3DMath.cpp  Mini3DMath.h
project/SoftMini3D/note/: 1.txt  3维旋转矩阵推导与助记.md  calc.md  note.md  rotate.md  run.py  图形学：MVP变换概述.md  图形学：观察矩阵_LookUp矩阵的推导.md  旋转矩阵.md
project/SoftMini3D/render/: Mini3DCalcrhw.cpp  Mini3DCalcrhw.h  Mini3DHodgman.cpp  Mini3DRender.cpp  Mini3DRender.h  Mini3DRenderFont.cpp
project/SutherlandHodgman/: CMakeLists.txt  hodgman.cpp  main.cpp  main.h
project/Trangle/: CMakeLists.txt  main.cpp  three_D.h
project/imguiDemo/: CMakeLists.txt  main.cpp
project/qt-renderer-master/: .gitignore  CMakeLists.txt  QtRenderer.sln  readme.md  test.cpp
project/qt-renderer-master/QtRenderer/: AddDialog.cpp  AddDialog.h  Model.h  QtRenderer.cpp  QtRenderer.h  QtRenderer.vcxproj  QtRenderer.vcxproj.filters  Rasterizer.cpp  Rasterizer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Triangle.h  main.cpp  main.h
project/qt-renderer-master/QtRenderer/models/abstract-pattern-design/: OC1Y8P1.eps
project/qt-renderer-master/QtRenderer/uic/: AddDialog.ui  QtRenderer.ui  ui_AddDialog.h  ui_QtRenderer.h
src/: glad.c  main.cpp
